...
                                        <rect key="frame" x="236.66666666666666" y="0.0" width="106.33333333333334" height="122.33333333333333"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPe-sj-RIO">
                                                <rect key="frame" x="0.0" y="0.0" width="106.33333333333333" height="55"/>
                                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                                <state key="normal" title="AC">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="titleShadowColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="taped2ACButton:" destination="eqK-jh-KKu" eventType="touchDownRepeat" id="D31-Jg-USk"/>
                                                    <action selector="tapedACButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="4EN-fV-0YI"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcN-te-1Wj">
                                                <rect key="frame" x="0.0" y="167.99999999999994" width="106.33333333333333" height="44"/>
                                                <color key="backgroundColor" red="0.080160968005657196" green="0.38311481475830078" blue="0.77849829196929932" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                <state key="normal" title="+/_">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="inverseButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="f48-ti-ouY"/>
                                                </connections>
                                            </button>
...
