...
        guard let alertInfo = notification.userInfo!["message"] as? String else { return }
        createAlert(message: alertInfo)
    } // end of alertCalcul

   func createAlert(message: String) {
        let alertVC = UIAlertController(title: "Alert !", message: message, preferredStyle: .alert)
        alertVC.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        present(alertVC, animated: true, completion: nil)
    } // end of createAlert

    // MARK: - View IBActions

    @IBAction func tapedNumberButton(_ sender: UIButton) {
...
